<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PhotoFragment"
    android:background="@color/white">

    <GridView
        android:layout_margin="@dimen/common_space"
        android:id="@+id/gvGaleria"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="3"
        android:horizontalSpacing="4dp"
        android:verticalSpacing="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btSubir"
        />


    <Button
        android:id="@+id/btSubir"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.3"
        android:text="@string/optener_subir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btGaleria" />

    <Button
        android:id="@+id/btCamera"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/common_space"
        android:text="@string/optener_camara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btGaleria"
        />

    <Button
        android:layout_margin="@dimen/common_space"
        android:id="@+id/btGaleria"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/optener_galeria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCamera"
        />

</androidx.constraintlayout.widget.ConstraintLayout>